--- a/src/app/pages/vendedores/vendedor/map-box-ordenes/map-box-ordenes.component.html
+++ b/src/app/pages/vendedores/vendedor/map-box-ordenes/map-box-ordenes.component.html
@@ -12,10 +12,10 @@
           <label for="inputEmail4">Fecha</label>
           <input id="date" type="date" class="form-control" name="date">
         </div>
-        <div class="form-group col-md-6">
+        <!-- <div class="form-group col-md-6">
           <label for="inputPassword4">Password</label>
           <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-        </div>
+        </div> -->
       </div>
     </form>
   </nb-card-body>
