cambio visualizacion botones

--- a/src/app/pages/vendedores/vendedor/vendedor.component.html
+++ b/src/app/pages/vendedores/vendedor/vendedor.component.html
@@ -30,8 +30,8 @@
     <div class="row text-center">
       <div class="col">
         <button *ngIf="!_IdAsesor" type="button" class="btn btn-hero-success btn-demo" (click)="activarUsuario()">Activar</button>
-        <button type="button" class="btn btn-hero-primary btn-demo" (click)="verUbicacion()">Ubicacion</button>
-        <button *ngIf="vendedoresService.bdName" type="button" class="btn btn-hero-primary btn-demo" (click)="verUbicacion2()">Ubicacion 2</button>
+        <!-- <button type="button" class="btn btn-hero-primary btn-demo" (click)="verUbicacion()">Ubicacion</button> -->
+        <button *ngIf="vendedoresService.bdName" type="button" class="btn btn-hero-primary btn-demo" (click)="verUbicacion2()">Ubicacion</button>
       </div>
     </div>
   </nb-card-body>
